--- a/src/style/popup/logoutpopup.scss
+++ b/src/style/popup/logoutpopup.scss
@@ -12,7 +12,7 @@
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
-    width: 25%;
+    width: 400px;
     background-color: #fff;
     border-radius: 5px;
 
