찜페이지 완성 / css 수정 from Eum
찜페이지 페이지네이션 / 정렬 완성 ,, 반응형 css 수정

2023-12-13

--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,10 @@ fieldset{
 }
 @media screen and (max-width: 1000px) {
   .inner{
-    width: 98%;
+    width: 90%;
   }
   
+}
+:root {
+  --red: rgb(247, 47, 51); 
 }
