--- a/src/style/detailItem/detailItem.scss
+++ b/src/style/detailItem/detailItem.scss
@@ -188,6 +188,7 @@
         height: 100%;
 
         img {
+          background-color: #fff;
           width: 100%;
           height: 100%;
           object-fit: cover;
@@ -435,6 +436,7 @@
     .productlist {
       float: none;
       width: auto;
+
       .pro {
         display: flex;
         width: 100%;
@@ -906,6 +908,7 @@
         display: flex;
         margin-top: 20px;
         margin-bottom: 16px;
+        cursor: pointer;
 
         .profileImg {
           position: relative;
@@ -935,40 +938,39 @@
         }
 
         .storeName {
-          a {
+
+
+          p {
             display: block;
+            margin: 4px 0px 4px;
+            color: rgb(33, 33, 33);
+            font-size: 15px;
+          }
 
-            p {
-              display: block;
-              margin: 4px 0px 4px;
-              color: rgb(33, 33, 33);
-              font-size: 15px;
-            }
+          ul {
+            display: flex;
 
-            ul {
-              display: flex;
+            li {
+              font-size: 12px;
+              color: rgb(153, 153, 153);
 
-              li {
-                font-size: 12px;
-                color: rgb(153, 153, 153);
+              &:first-child {
+                margin-right: 17px;
+                position: relative;
 
-                &:first-child {
-                  margin-right: 17px;
-                  position: relative;
-
-                  &::after {
-                    content: "";
-                    position: absolute;
-                    top: 4px;
-                    right: -8px;
-                    width: 1px;
-                    height: 12px;
-                    border-right: 1px solid rgb(204, 204, 204);
-                  }
+                &::after {
+                  content: "";
+                  position: absolute;
+                  top: 4px;
+                  right: -8px;
+                  width: 1px;
+                  height: 12px;
+                  border-right: 1px solid rgb(204, 204, 204);
                 }
               }
             }
           }
+
 
 
         }
