add border-radius at product component from ho
add border-radius at product component
modify some css etc components

2023-12-14

--- a/src/style/chat/chat.css
+++ b/src/style/chat/chat.css
@@ -190,6 +190,7 @@
   float: none;
 }
 .chatList .chatList_right .purchase .productlist .pro {
+  border-radius: none;
   display: flex;
   border: none;
   background-color: transparent;
