--- a/src/style/chat/chat.scss
+++ b/src/style/chat/chat.scss
@@ -195,6 +195,7 @@
         flex: 1;
         float:none;
         .pro {
+          border-radius: none;
           display: flex;
           border: none;
           background-color: transparent;
