--- a/src/style/Product/product.css
+++ b/src/style/Product/product.css
@@ -11,6 +11,7 @@
   filter: brightness(95%);
   background-color: #fff;
   border: 1px solid #ddd;
+  border-radius: 10px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   width: 100%;
   text-align: left;
