--- a/src/style/purchase/purchase.css
+++ b/src/style/purchase/purchase.css
@@ -40,15 +40,25 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 .purchaseMain > .productlist .pro .pro_comtent * {
   font-size: 1.2em;
   margin: 5px 0;
   font-weight: 600;
 }
+.purchaseMain > .productlist .pro .pro_comtent .pro_pr_da {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
 .purchaseMain > .productlist .pro .pro_comtent .pro_name {
   width: 100%;
+  font-size: 1.4em;
+  text-align: left;
+}
+.purchaseMain > .productlist .pro .pro_comtent .pro_date {
+  font-size: 0.8em;
 }
 .purchaseMain .purchaseMain_message {
   font-size: 1.5em;
