headerSearchjsx, SearchProductjsx, css 들 수정 from yang2
headerSearchjsx 검색창 X 버튼 검색어 입력 시 온체인지 수정,
headerSearchjsx 검색 시 로컬스토리지에 키값 넣기 및 검색어 삭제,
searchProductjsx query 가져오기 등 수정

2023-12-14

--- a/src/style/header/headersearch.css
+++ b/src/style/header/headersearch.css
@@ -48,12 +48,16 @@
   align-items: center;
   border-bottom: 2px solid rgb(217, 217, 217);
   position: relative;
+  width: 100%;
+  flex-wrap: nowrap;
 }
 .HeaderSearch .Searchpop .searchcontent .titlename2 div {
   padding: 6px;
 }
-.HeaderSearch .Searchpop .searchcontent .titlename2 .recently2 span {
+.HeaderSearch .Searchpop .searchcontent .titlename2 span {
   color: red;
+  overflow-wrap: break-word;
+  width: 50%;
 }
 .HeaderSearch .Searchpop .searchcontent .searchcenter2 {
   height: 360px;
@@ -72,6 +76,9 @@
   background-color: #efefef;
 }
 .HeaderSearch .Searchpop .searchfooter .searchclose {
+  cursor: pointer;
+}
+.HeaderSearch .Searchpop .searchfooter .searchdelete {
   cursor: pointer;
 }
 .HeaderSearch .searchCloseBtn {
