--- a/src/style/searchproduct/searchproduct.css
+++ b/src/style/searchproduct/searchproduct.css
@@ -46,7 +46,7 @@
 }
 .searchProduct .searchproductmain .searchproductcontent {
   display: flex;
-  justify-content: space-between;
+  justify-content: first baseline;
   flex-wrap: wrap;
 }
 .searchProduct .searchproductmain .searchproductcontent li {
